I fixed the white space on the right side wohoo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,7 @@
 @import "pages/index";
 
 
+body {
+  background-color: $light-pink;
+}
+
