--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,12 +1,12 @@
 .banner-kit {
   background-size: cover;
-  background-position: center;
   padding: 150px 0;
+  width: 100%;
   height: 480px;
   background-image: url('homepage-banner.jpg');
   background-position: center;
   background-size: cover;
-  position: relative;
+
 }
 
 .banner-kit h1 {
