--- a/app/assets/stylesheets/components/_img.scss
+++ b/app/assets/stylesheets/components/_img.scss
@@ -3,17 +3,6 @@
   height: auto;
 }
 
-// .leaf-container-left{
-//   position: relative;
-//   min-width: 50%;
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-// }
-
-// #leaf-container-right {
-
-// }
-
 .leaf-left{
   left: -50px;
   top: -30px;
@@ -23,22 +12,10 @@
 
 }
 
-
-// .leaf-container-right{
-//   position: relative;
-//   min-width: 50%;
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-// }
-
-// #leaf-container-right {
-
-// }
-
 .leaf-right{
   right: -50px;
-  top: -30px;
+  top: -16px;
   width: 200px;
   height: auto;
-  position: absolute
+  position: absolute;
 }
