--- a/app/assets/stylesheets/config/_config.scss
+++ b/app/assets/stylesheets/config/_config.scss
@@ -2,12 +2,6 @@ html {
 	scroll-behavior: smooth;
 }
 
-
 .main-content {
   margin-bottom: 100px
-}
-
-
-body {
-  background-color: $light-pink;
 }
